# openvino_sycl_poc

cmake/developer_package/compile_flags/: os_flags.cmake  sdl.cmake
inference-engine/include/: ie_iextension.h
inference-engine/src/cldnn_engine/: async_infer_request.cpp  async_infer_request.hpp  cldnn_common_utils.h  cldnn_engine.cpp  cldnn_engine.h  cldnn_executable_network.cpp  cldnn_executable_network.h  cldnn_extension_manager.cpp  cldnn_extension_manager.h  cldnn_extensions.cpp  cldnn_extensions.h  cldnn_graph.cpp  cldnn_graph.h  cldnn_infer_request.cpp  cldnn_program.cpp  cldnn_program.h  cldnn_remote_context.cpp  cldnn_remote_context.h  infer_request.cpp  infer_request.hpp
inference-engine/src/cldnn_engine/ops/: batch_to_space.cpp  constant.cpp  convolution.cpp  custom.cpp  matmul.cpp  non_max_suppression.cpp  pad.cpp  parameter.cpp  pooling.cpp  prior_box.cpp  reduce.cpp  rnn.cpp  space_to_batch.cpp
inference-engine/src/inference_engine/: ie_iextension.cpp
samples/cpp/classification_sample_async/: CMakeLists.txt  main.cpp
src/bindings/python/src/openvino/: utils.py
src/bindings/python/tests/test_graph/: test_preprocess.py
src/common/transformations/tests/common_optimizations/: nop_elimination.cpp
src/core/include/openvino/core/: evaluate_extension.hpp
src/core/shape_inference/include/: broadcast_shape_inference.hpp  shape_nodes.hpp
src/core/src/: symbol.cpp
src/core/src/op/: range.cpp
src/core/src/preprocess/: pre_post_process.cpp  preprocess_impls.cpp  preprocess_impls.hpp
src/inference/dev_api/: remote_utils.hpp
src/inference/include/ie/: ie_plugin_config.hpp
src/inference/src/dev/: converter_utils.cpp  converter_utils.hpp  make_tensor.cpp
src/plugins/intel_cpu/src/: cpu_types.cpp  exec_network.cpp  exec_network.h  graph.cpp  graph.h  infer_request.cpp  infer_request.h  memory_state.cpp  memory_state.h  node.cpp  node.h
src/plugins/intel_gpu/: CMakeLists.txt
src/plugins/intel_gpu/docs/: gpu_debug_utils.md  simplified_workflow.md
src/plugins/intel_gpu/src/: format_exec_graph.py  sc.py
src/plugins/one_plugin/: CMakeLists.txt
src/plugins/one_plugin/docs/: arch.md  flow.md  transformations_flow.md
src/plugins/one_plugin/src/: common_utils.cpp  common_utils.hpp  execution_config.cpp  execution_config.hpp  internal_properties.hpp
src/plugins/one_plugin/src/backend/cpu/: CMakeLists.txt  activation_cpu.cpp  activation_cpu.hpp  base_cpu_impl.cpp  base_cpu_impl.hpp  batch_to_space_cpu.cpp  batch_to_space_cpu.hpp  convolution_cpu.cpp  convolution_cpu.hpp  eltwise_cpu.cpp  eltwise_cpu.hpp  fully_connected_cpu.cpp  fully_connected_cpu.hpp  reshape_cpu.cpp  reshape_cpu.hpp
src/plugins/one_plugin/src/backend/gpu/: activation_gpu.cpp  activation_gpu.hpp  eltwise_gpu.cpp  eltwise_gpu.hpp  layout_optimizer.hpp
src/plugins/one_plugin/src/backend/ocl/: CMakeLists.txt  activation_ocl.cpp  activation_ocl.hpp  base_ocl_impl.cpp  base_ocl_impl.hpp  eltwise_ocl.cpp  eltwise_ocl.hpp  impl_builder.hpp  layout_optimizer.cpp  layout_optimizer.hpp
src/plugins/one_plugin/src/backend/ocl/common/: kernel_data.hpp  kernels_db.cpp  kernels_db.hpp
src/plugins/one_plugin/src/extension/: executor.hpp  extended_opset.cpp  extended_opset.hpp  extended_opset_tbl.hpp  implementation_args.hpp  implementation_builder.cpp  implementation_builder.hpp  implementation_factory.cpp  implementation_factory.hpp  implementation_params.hpp  implementation_registry.hpp  implementation_selector.cpp  implementation_selector.hpp  layout_optimizer.cpp  layout_optimizer.hpp  memory.hpp  memory_descriptor.hpp  node_extension.cpp  node_extension.hpp  op_implementation.hpp  optimization_attributes.hpp
src/plugins/one_plugin/src/impls/: activation.cpp  activation.hpp  batch_to_space.cpp  batch_to_space.hpp  convolution.cpp  convolution.hpp  eltwise.cpp  eltwise.hpp  fully_connected.cpp  fully_connected.hpp  nop.cpp  reshape.cpp  reshape.hpp
src/plugins/one_plugin/src/opset/: asymmetric_convolution.cpp  asymmetric_convolution.hpp  convolution.cpp  fully_connected.cpp  fully_connected_compressed.cpp  gather_compressed.cpp  gemm.cpp  indirect_gemm.cpp  indirect_gemm.hpp  kv_cache.cpp  placeholder.cpp  read_value.cpp  reorder.cpp  reorder.hpp  rms.cpp  swiglu.cpp
src/plugins/one_plugin/src/plugin/: async_infer_request.cpp  async_infer_request.hpp  compiled_model.cpp  compiled_model.hpp  plugin.cpp  plugin.hpp  remote_context.cpp  remote_context.hpp  remote_tensor.cpp  remote_tensor.hpp  sync_infer_request.cpp  sync_infer_request.hpp  transformations_pipeline.cpp  transformations_pipeline.hpp  variable_state.cpp  variable_state.hpp
src/plugins/one_plugin/src/runtime/: device.cpp  device.hpp  device_info.hpp  device_query.cpp  device_query.hpp  engine.cpp  engine.hpp  event.cpp  event.hpp  memory.cpp  memory.hpp  memory_descriptor.hpp  stream.cpp  stream.hpp
src/plugins/one_plugin/src/transformations/: bcast_and_pad_zp_buffers.cpp  build_implementations.cpp  convert_conv_to_asymmetric_conv.cpp  convert_convolution.cpp  convert_fc_to_compressed.cpp  convert_gather_to_compressed.cpp  convert_matmul_to_fc.cpp  convert_to_extended_opset.cpp  convert_to_extended_opset.hpp  fc_convert_fusion.cpp  indirect_kv_cache.cpp  insert_reorders.cpp  insert_reorders.hpp  kv_cache_fusion.cpp  layout_assignment.cpp  layout_assignment.hpp  layout_propagation.cpp  layout_propagation.hpp  markup_nodes.cpp  markup_nodes.hpp  move_fc_reshape_to_weights.cpp  rms_fusion.cpp  select_implementations.cpp  swiglu_fusion.cpp  transformations_pipeline.cpp  transformations_pipeline.hpp  transpose_matmul_fusion.cpp
src/plugins/one_plugin/tests/: CMakeLists.txt
src/plugins/one_plugin/tests/functional/: CMakeLists.txt
src/plugins/one_plugin/tests/functional/shared_test_instances/: skip_tests_config.cpp
src/plugins/one_plugin/tests/functional/single_layer_tests/: new_pipeline_test.cpp
src/plugins/proxy/src/: infer_request.cpp  remote_tensor.cpp
src/tests/functional/inference_engine/: CMakeLists.txt
src/tests/ie_test_utils/common_test_utils/: ov_tensor_utils.cpp
(+715 files in other folders)
